# rust2024

./: Cargo.toml  README.md
src/: lib.rs  main.rs
static/: index.html
