[package]
name = "labs2024"
version = "0.1.0"
edition = "2021"
default-run = "labs2024"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
zip = "0.6.6"
mimalloc = { version = "*", default-features = false }
rayon = "1.10.0"
eyre = "0.6.12"
tokio = "1.37.0"
clap = { version = "4.5.4", features = ["derive"] }
rmp-serde = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]


[profile.release]
debug = true

